@@ -429,13 +429,6 @@ name|Properties
 argument_list|>
 argument_list|()
 decl_stmt|;
-DECL|field|requestParams
-specifier|private
-name|DataImporter
-operator|.
-name|RequestParams
-name|requestParams
-decl_stmt|;
 DECL|field|debugDocuments
 specifier|private
 name|List
@@ -690,8 +683,11 @@ operator|.
 name|getParams
 argument_list|()
 decl_stmt|;
+name|DataImporter
+operator|.
+name|RequestParams
 name|requestParams
-operator|=
+init|=
 operator|new
 name|DataImporter
 operator|.
@@ -702,7 +698,7 @@ argument_list|(
 name|params
 argument_list|)
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|String
 name|command
 init|=
@@ -1094,6 +1090,8 @@ argument_list|(
 name|processor
 argument_list|,
 name|loader
+argument_list|,
+name|requestParams
 argument_list|)
 decl_stmt|;
 if|if
@@ -1637,6 +1635,12 @@ parameter_list|,
 specifier|final
 name|SolrResourceLoader
 name|loader
+parameter_list|,
+specifier|final
+name|DataImporter
+operator|.
+name|RequestParams
+name|requestParams
 parameter_list|)
 block|{
 return|return
@@ -1692,11 +1696,19 @@ argument_list|(
 name|document
 argument_list|)
 expr_stmt|;
+block|}
 if|if
 condition|(
-name|debugDocuments
+name|importer
 operator|.
-name|size
+name|getDocBuilder
+argument_list|()
+operator|.
+name|importStatistics
+operator|.
+name|docCount
+operator|.
+name|get
 argument_list|()
 operator|>=
 name|requestParams
@@ -1713,7 +1725,22 @@ operator|.
 name|abort
 argument_list|()
 expr_stmt|;
-block|}
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Indexing stopped at docCount = "
+operator|+
+name|importer
+operator|.
+name|getDocBuilder
+argument_list|()
+operator|.
+name|importStatistics
+operator|.
+name|docCount
+argument_list|)
+expr_stmt|;
 block|}
 return|return
 name|super
